writable/eksekusi/1234567/error.txt
Main.java:5: error: not a statement
print
^
Main.java:5: error: ';' expected
print
     ^
2 errors
